# polygon-plonky2

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: continuous-integration-workflow.yml
field/src/: goldilocks_field.rs  lib.rs
mle/: Cargo.toml  README.md  soundness_game_claude.py
mle/audit/: Audit.lean  README.md  REPORT.md  SCOPE.md  lake-manifest.json  lakefile.lean
mle/audit/Audit/: Algebra.lean  Field.lean  Mle.lean  Pcs.lean  Poly.lean  Prelude.lean  Protocol.lean  Statements.lean  Sumcheck.lean  Transcript.lean  Whir.lean
mle/audit/Audit/Impl/: Divergences.lean  ImplStatements.lean  RustSumcheck.lean  RustTranscript.lean  RustVerifier.lean  SolVerifier.lean
mle/audit/Audit/Proofs/: D3.lean  D3Strong.lean  EqPoly.lean  MleLemmas.lean  Statements.lean  SumcheckCore.lean
mle/contracts/: .gas-snapshot  foundry.toml
mle/contracts/src/: ConstraintEvaluator.sol  CosetInterpolationConstants.sol  EqPolyLib.sol  GoldilocksField.sol  MleVerifier.sol  Plonky2GateEvaluator.sol  PoseidonConstants.sol  PoseidonGate.sol  SumcheckVerifier.sol  TranscriptLib.sol
mle/contracts/src/spongefish/: GoldilocksExt3.sol  Keccak256Chain.sol  SpongefishMerkle.sol  SpongefishWhir.sol  SpongefishWhirVerify.sol  WhirLinearAlgebra.sol
mle/contracts/test/: BoundaryCheckTest.t.sol  CosetInterpolationTest.t.sol  CosetInterpolationVectors.sol  E2EFixtureTest.t.sol  GasBenchmark.t.sol  LagrangeTest.t.sol  MleE2ETest.t.sol  MleVerifierTest.sol  TranscriptCompat.t.sol  TranscriptE2ETrace.t.sol  WhirVerifyTest.t.sol
mle/contracts/test/fixtures/: coset_recursive_verify.json  huge_mul.json  large_mul.json  medium_mul.json  poseidon_hash.json  recursive_verify.json  small_mul.json  xlarge_mul.json
mle/paper/: plonky2_mle_paper_v2.md  whir_optimization_report.md
mle/soundnessgame/: ConstraintEvaluator.vol.md  EqPolyLib.vol.md  GoldilocksExt3.vol.md  GoldilocksField.vol.md  Keccak256Chain.vol.md  MleVerifier.vol.md  Plonky2GateEvaluator.vol.md  PoseidonConstants.vol.md  PoseidonGate.vol.md  SpongefishMerkle.vol.md  SpongefishWhir.vol.md  SpongefishWhirVerify.vol.md  SumcheckVerifier.vol.md  TranscriptLib.vol.md  WhirLinearAlgebra.vol.md
mle/src/: config.rs  constraint_eval.rs  dense_mle.rs  eq_poly.rs  fixture.rs  lib.rs  proof.rs  prover.rs  transcript.rs  verifier.rs
mle/src/commitment/: merkle_pcs.rs  mod.rs  traits.rs  whir_pcs.rs
mle/src/permutation/: logup.rs  lookup.rs  mod.rs
mle/src/sumcheck/: prover.rs  types.rs  verifier.rs
mle/tasks/: phase2_c2_poc_report.md  phase3_c1_threat_model.md  phase3_c2_threat_model.md  todo.md
mle/tests/: benchmarks.rs  dump_coset_constants.rs  dump_coset_test_vectors.rs  dump_poseidon_constants.rs  generate_fixtures.rs  integration_tests.rs  transcript_compat.rs  transcript_e2e_trace.rs
plonky2/: Cargo.toml
plonky2/shaders/: buffer_canonical_to_montgomery.wgsl  buffer_montgomery_to_canonical.wgsl  merkle_tree.wgsl  poseidon1_hash.wgsl  transpose_to_montgomery.wgsl
plonky2/src/batch_fri/: oracle.rs
plonky2/src/fri/: oracle.rs  proof.rs  prover.rs  recursive_verifier.rs  validate_shape.rs
plonky2/src/gadgets/: polynomial.rs
plonky2/src/gates/: base_sum.rs  selectors.rs
plonky2/src/hash/: hash_types.rs  merkle_proofs.rs  merkle_tree.rs  merkle_tree_gpu.rs  mod.rs
plonky2/src/hash/arch/aarch64/: poseidon_goldilocks_neon.rs
plonky2/src/iop/: ext_target.rs  target.rs
plonky2/src/plonk/: circuit_builder.rs  circuit_data.rs  config.rs  mod.rs  proof.rs  prover.rs
plonky2/src/recursion/: cyclic_recursion.rs  dummy_circuit.rs  recursive_verifier.rs
plonky2/src/util/: mod.rs  profiling.rs  reducing.rs
plonky2/src/util/serialization/: gate_serialization.rs  mod.rs
starky/: Cargo.toml
starky/src/: prover.rs
tasks/: coset_interpolation_port.md  todo.md
