[package]
name = "plonky2_mle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["cryptography", "SNARK", "multilinear", "sumcheck", "WHIR"]
categories = ["cryptography"]

[dependencies]
plonky2_field = { path = "../field", default-features = false }
plonky2 = { path = "../plonky2", default-features = false }
plonky2_maybe_rayon = { path = "../maybe_rayon" }
plonky2_util = { path = "../util", default-features = false }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
keccak-hash = "0.8.0"

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng"] }

[features]
default = ["std"]
std = ["plonky2/default", "anyhow/std"]
