[package]
name = "plonky2"
description = "Recursive SNARKs based on PLONK and FRI"
version = "1.1.0"
authors = ["Daniel Lubarov <daniel@lubarov.com>", "William Borgeaud <williamborgeaud@gmail.com>", "Nicholas Ward <npward@berkeley.edu>"]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# default = ["gate_testing", "parallel", "rand_chacha", "std", "timing"]
gate_testing = []
parallel = ["hashbrown/rayon", "plonky2_maybe_rayon/parallel"]
std = ["anyhow/std", "rand/std", "itertools/use_std", "dep:futures", "dep:pollster"]
timing = ["std", "dep:web-time"]
merkle_debug_print = ["dep:console_log"]
gpu_merkle = [
    "std",
    "dep:wgpu",
    "dep:bytemuck",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:console_error_panic_hook",
    "dep:console_log",
    "dep:once_cell",
]
gpu_merkle_verbose_time_logging = ["gpu_merkle"]
gpu_merkle_logging = ["gpu_merkle", "gpu_merkle_verbose_time_logging"]
wasm_test_exports = []

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
keccak-hash = { version = "0.8.0", default-features = false }
log = { workspace = true }
num = { workspace = true }
rand = { workspace = true }
rand_chacha = { version = "0.3.1", optional = true, default-features = false }
serde = { workspace = true, features = ["rc"] }
static_assertions = { workspace = true }
unroll = { workspace = true }
web-time = { version = "1.0.0", optional = true }
futures = { version = "0.3", optional = true, default-features = false, features = ["executor", "std", "async-await"] }
futures-channel = "0.3"
pollster = { version = "0.3", optional = true }

# Local dependencies
plonky2_field = { version = "1.0.0", path = "../field", default-features = false }
plonky2_maybe_rayon = { version = "1.0.0", path = "../maybe_rayon", default-features = false }
plonky2_util = { version = "1.0.0", path = "../util", default-features = false }
serde_with = "3.15.0"

# multi producer, multi consumer async channels that work on native and wasm
flume = "0.11"

# For panic error messages in WASM code
console_error_panic_hook = "0.1.7"

gloo-timers = { version = "*", features = ["futures"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
bytemuck = { version = "1.18", features = ["derive"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console", "Performance"], optional = true }
wgpu = { version = "26", default-features = false, features = ["webgpu", "wgsl"], optional = true }
once_cell = { version = "1.20", default-features = false, features = ["std"], optional = true }
console_log = { version = "1.0.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
num_cpus = { version = "1.14.0", default-features = false }
rand = { workspace = true, features = ["getrandom"] }
rand_chacha = { version = "0.3.1", default-features = false }
serde_cbor = { version = "0.11.2" }
serde_json = { version = "1.0" }
structopt = { version = "0.3.26", default-features = false }
tynm = { version = "0.1.6", default-features = false }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
jemallocator = "0.5.0"

[[bin]]
name = "generate_constants"
required-features = ["rand_chacha"]

[[bench]]
name = "field_arithmetic"
harness = false

[[bench]]
name = "ffts"
harness = false

[[bench]]
name = "hashing"
harness = false

[[bench]]
name = "merkle"
harness = false

[[bench]]
name = "transpose"
harness = false

[[bench]]
name = "reverse_index_bits"
harness = false

# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]

[lints]
workspace = true

# For WASM Merkle tree test case
[lib]
crate-type = ["cdylib", "rlib"]
